src/index.css
body {
  --bg-light-color: white;
  --text-light-color: black;
  --bg-dark-color: #333;
  --text-dark-color: white;

  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-repeat: no-repeat, repeat;
  background-position: center;
  background-attachment: fixed; 
  height: 100vh;
}

body.dark, div.dark, span.dark, a.dark, th.dark, td.dark, h1.dark,
h2.dark, h3.dark, i.dark {
  background-color: var(--bg-dark-color);
  color: var(--text-dark-color);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

